# spatiumddi

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IPAM-REVIEW-ISSUES.md  LICENSE  MEDIUM-BUGS-PROGRESS.md  Makefile  NOTICE  PROGRESS.md  README.md  ROADMAP_TRIAGE.md  SECURITY.md  docker-compose.agent-dhcp.yml  docker-compose.agent-dns-bind9.yml  docker-compose.agent-dns-powerdns.yml  docker-compose.agent-dns.yml  docker-compose.agent-looking-glass.yml  docker-compose.dev.yml  docker-compose.dns-encrypted.yml  docker-compose.yml  scratchpad-523-summary.md  scratchpad-524-summary.md  scratchpad-527-summary.md  scratchpad-528-summary.md  scratchpad-530-summary.md  scratchpad-fix-bgp.md  scratchpad-fix-dnsbl.md  scratchpad-fix-pools.md  scratchpad-fix-ra.md
agent/dhcp/: README.md  pyproject.toml
agent/dhcp/spatium_dhcp_agent/: __init__.py  __main__.py  bootstrap.py  cache.py  cli.py  config.py  dhcp_fingerprint.py  ha_status.py  heartbeat.py  kea_ctrl.py  leases.py  log.py  log_shipper.py  mac_sighting.py  metrics.py  pairing.py  peer_resolve.py  ra_sniffer.py  radvd_apply.py  render_kea.py  rogue_probe.py  slot_state.py  supervisor.py  sync.py
agent/dhcp/tests/: conftest.py  test_acceptance.py  test_cache.py  test_config_test_preflight.py  test_dhcp_fingerprint.py  test_leases.py  test_mac_sighting.py  test_metrics.py  test_pairing.py  test_peer_resolve.py  test_radvd_apply.py  test_render_kea.py  test_sync_split.py
agent/dns/: README.md  pyproject.toml
agent/dns/spatium_dns_agent/: __init__.py  __main__.py  admin_pusher.py  bootstrap.py  cache.py  config.py  heartbeat.py  ingest.py  log.py  metrics.py  pairing.py  query_log_shipper.py  slot_state.py  supervisor.py  sync.py
agent/dns/tests/: conftest.py  test_acceptance.py  test_agent_token.py  test_dnssec_render.py  test_dynamic_update_render.py  test_encrypted_transport_render.py  test_metrics.py  test_pairing.py  test_powerdns_catalog.py  test_powerdns_dynamic_update.py  test_rate_limit_render.py  test_views_render.py
agent/looking-glass/: README.md  pyproject.toml
agent/looking-glass/spatium_lg_agent/: __init__.py  __main__.py  bootstrap.py  cache.py  config.py  gobgp.py  heartbeat.py  log.py  rib.py  supervisor.py  sync.py
agent/supervisor/: README.md  pyproject.toml
agent/supervisor/spatium_supervisor/: __init__.py  __main__.py  appliance_state.py  approval_state.py  cert_auth.py  config.py  docker_api.py  firewall_peer_audit.py  firewall_renderer.py  heartbeat.py  identity.py  k8s_api.py  k8s_proxy.py  kmsg_reader.py  log.py  nettools.py  nettools_proxy.py  pcap_proxy.py  register.py  role_orchestrator.py  service_lifecycle.py  service_lifecycle_k3s.py  state.py  watchdog.py
agent/supervisor/tests/: test_appliance_variant.py  test_cluster_join_triggers.py  test_cnpg_scale.py  test_console_mode_triggers.py  test_coredns_ha.py  test_effective_control_plane_url.py  test_firewall_applystate.py  test_firewall_peer_audit.py  test_firewall_pipe.py  test_firewall_prereqs.py  test_firewall_renderer.py  test_firewall_self_partition.py  test_host_config_fire_guard.py  test_host_migration_health.py  test_identity.py  test_lldp_neighbours.py  test_lldp_triggers.py  test_redis_storage_reclaim.py  test_register.py  test_resolver_triggers.py  test_slot_upgrade_stale_inflight.py  test_smoke.py  test_ssh_triggers.py  test_syslog_triggers.py
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py  migrations_lint_baseline.txt
backend/alembic/versions/: 076e76856742_appliance_port_conflicts.py  0f83a227b16d_event_subscription_outbox_tables_for_.py  1440e72b9297_metallb_bgp_mode.py  1a48e694db0b_initial_schema.py  1ad1e7de9fc4_extended_schema.py  2c24fe41a7ed_change_requests.py  2c4e9d1a7f63_vrf_first_class.py  30135c361a47_netbox_import.py  30cda233dce9_add_smtp_chat_flavor_to_audit_forward_.py  3124d540d74f_domain_registration.py  3b7f92c10d5e_add_platform_settings.py  4a7c8e3d51b9_asn_phase2.py  4a9e7c2d18b3_domain_phase2.py  4c9e1f82a3b7_add_dns_schema.py  531494dbf44c_bgp_lg_alerts_dashboard.py  5443d2756647_approvals_protect_controls.py  5d2a8f91c4e6_add_dns_settings_and_fix_session_timeout.py  66471b4aa8e0_appliance_role_switch_state.py  78bfb374d56d_appliance_firewall_extra.py  79a2e409e774_appliance_slot_telemetry.py  7c299e8a5490_dns_tsig_keys.py  97190c1b0325_dns_server_api_key_encrypted_bytes.py  a07f6c12e5d3_dns_zone_forwarders.py  a1b2c3d4e5f6_add_dns_assignment_to_ipam.py  a1c4f7e92b30_dhcp_scope_relay_addresses.py  a1c7e9f32b84_site_code_partial_unique.py  a1c7f3e9b284_bgp_hijack_monitoring.py  a1f4c7e92b30_dhcp_scope_provider_refs.py  a1f4d97c8e25_network_device_poll_igmp.py  a3c8e5d61b94_subnet_classification_tags.py  (+228 more)
backend/app/: celery_app.py  config.py  db.py  log.py  main.py  metrics.py
backend/tests/: conftest.py  test_acme.py  test_acme_client.py  test_address_set_security.py  test_agent_wake.py  test_ai_dns_record_srv.py  test_ai_tool_modules.py  test_ai_tools_maintenance.py  test_ai_write_operations.py  test_alert_bgp_lg.py  test_alert_decom_expiring.py  test_alert_dns_query_anomaly.py  test_alert_ip_hygiene.py  test_alert_secret_expiring.py  test_alert_wol_wake_failed.py  test_alerts_firewall_apply_stalled.py  test_ansible_inventory.py  test_api_token_resource_grants.py  test_appliance_cert_sans.py  test_appliance_cluster_state_recovery.py  test_appliance_containers.py  test_appliance_control_plane_promote.py  test_appliance_delete_dependents.py  test_appliance_firewall_applystate.py  test_appliance_firewall_heartbeat.py  test_appliance_firewall_peers.py  test_appliance_firewall_prereqs.py  test_appliance_firewall_render.py  test_appliance_host_config_delivery.py  test_appliance_host_config_health.py  test_appliance_lldp.py  test_appliance_lldp_neighbours.py  test_appliance_ntp.py  test_appliance_pairing.py  test_appliance_resolver.py  test_appliance_self_register_bootstrap.py  test_appliance_snmp.py  test_appliance_ssh.py  test_appliance_supervisor_register.py  test_appliance_upgrade_download.py  (+226 more)
(+1352 files in other folders)
