[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "spatiumddi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.6.0",
    "prometheus-client>=0.21.0",
    "authlib>=1.3.2",
    "httpx>=0.28.0",
    "cryptography>=43.0.0",
    "openpyxl>=3.1.5",
    "dnspython>=2.7.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    # Pinned <1.0: pytest-asyncio 1.x changed loop scoping in a way that breaks
    # the session-scoped engine in tests/conftest.py (cross-loop "another
    # operation in progress" / "attached to a different loop" errors). Stay
    # on the 0.x line until the conftest gets a per-test engine fixture.
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E501 is owned by black (also configured at 100 chars). Ruff's E501 fires on
# long string literals / URLs that black can't wrap, which produces noise
# without value. N818 (exception suffix) doesn't fit the existing API schema names.
ignore = ["E501", "N818"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
# `strict = true` was aspirational but the codebase has 88 strict-mode
# violations and 20 default-mode violations (mostly Optional → non-Optional
# assignment after a None check, name-redef in conditional branches, and a
# couple of pydantic-mypy / dataclass interactions). Run mypy in default
# mode and silence the high-noise / low-signal categories so it still
# catches real bugs (return-value, arg-type, call-arg, var-annotated, …)
# without flooding CI. Tighten one rule at a time as the codebase is fixed.
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
disable_error_code = ["assignment", "no-redef", "attr-defined", "index", "operator", "unused-ignore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
