[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "spatiumddi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.6.0",
    "prometheus-client>=0.21.0",
    "authlib>=1.3.2",
    "httpx>=0.28.0",
    "cryptography>=43.0.0",
    "ldap3>=2.9.1",
    "python3-saml>=1.16.0",
    "pyrad>=2.4",
    "tacacs_plus>=2.6",
    "openpyxl>=3.1.5",
    "dnspython>=2.7.0",
    "jinja2>=3.1.4",
    "pywinrm>=0.4.3",
    "pysnmp~=6.2",
    "pyotp>=2.9.0",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E501 is owned by black (also configured at 100 chars). Ruff's E501 fires on
# long string literals / URLs that black can't wrap, which produces noise
# without value. N818 (exception suffix) doesn't fit the existing API schema names.
ignore = ["E501", "N818"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
# `strict = true` was aspirational but the codebase has 88 strict-mode
# violations and 20 default-mode violations (mostly Optional → non-Optional
# assignment after a None check, name-redef in conditional branches, and a
# couple of pydantic-mypy / dataclass interactions). Run mypy in default
# mode and silence the high-noise / low-signal categories so it still
# catches real bugs (return-value, arg-type, call-arg, var-annotated, …)
# without flooding CI. Tighten one rule at a time as the codebase is fixed.
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
disable_error_code = ["assignment", "no-redef", "attr-defined", "index", "operator", "unused-ignore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Force every async fixture and test onto a single session-scoped event loop.
# `tests/conftest.py` builds the SQLAlchemy async engine at import time and
# its session-scoped schema-create fixture pulls the first connection on the
# session loop. Without this, function-scoped tests get a fresh per-test loop
# and asyncpg blows up with "another operation in progress" / "attached to a
# different loop" the moment a test reuses the pooled connection.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
