[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatium-lg-agent"
version = "2026.07.04.1"
description = "SpatiumDDI sidecar agent for the receive-only BGP Looking Glass collector (GoBGP)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "SpatiumDDI Contributors" }]
dependencies = [
  "httpx>=0.27",
  "structlog>=24.1",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
spatium-lg-agent = "spatium_lg_agent.__main__:main"

[tool.setuptools.packages.find]
include = ["spatium_lg_agent*"]

[tool.ruff]
line-length = 100
target-version = "py312"
